<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_accueil"
                android:icon="@drawable/ic_home_black"
                android:title="@string/title_activity_main"/>
        <item
                android:id="@+id/nav_menu_type"
                android:icon="@drawable/ic_fiche_black"
                android:title="@string/menu_type"/>
        <item
                android:id="@+id/nav_mes_journees"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/mes_journees"/>
        <item
                android:id="@+id/nav_mon_profil"
                android:icon="@drawable/ic_accessibility_black"
                android:title="@string/mon_profil"/>
        <item
                android:id="@+id/nav_mon_suivi"
                android:icon="@drawable/ic_star_black"
                android:title="@string/mon_suivi"/>
        <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_message"
                android:id="@+id/nav_message"/>
        <item
                android:id="@+id/nav_stat"
                android:icon="@drawable/stats"
                android:title="Statistique"/>
        <item
                android:id="@+id/deconnexion"
                android:icon="@drawable/deconnexion"
                android:title="Déconnexion"/>

    </group>
</menu>
