<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuJourneeActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">
        <Button
                android:id="@+id/btn_ptidej"
                android:text="@string/str_petit_dej"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textSize="25dp"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:textColor="@color/colorText"
                android:background="@color/colorButton"/>
        <Button
            android:id="@+id/btn_dej"
            android:text="@string/str_dej"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textSize="25dp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"/>
        <Button
                android:id="@+id/btn_diner"
                android:text="@string/str_diner"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textSize="25dp"
                android:layout_width="280dp"
                android:layout_margin="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:background="@color/colorButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>