<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_inscription"
        tools:context=".InscriptionActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InscriptionActivity"
            android:orientation="vertical">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="440dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edt_nom_inscription" android:hint="@string/str_nom"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edt_prenom_inscription" android:hint="@string/str_prenom"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edt_pseudo_inscription" android:hint="@string/str_pseudo"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription" android:hint="@string/str_mdp"/>

                <EditText
                        android:id="@+id/edt_mail_inscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription2" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription3" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription4" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription5" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription6" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_inscription7" android:hint="@string/str_mdp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_password_confirm_inscription" android:hint="@string/str_mdp_confirm"/>
                <Button
                        android:text="@string/button_inscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btn_inscription"
                        android:backgroundTint="@color/colorButton" android:textColor="@color/colorText"
                        tools:layout_editor_absoluteY="-7dp" tools:layout_editor_absoluteX="419dp"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>