<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Connexion">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/identifiant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="58dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="106dp"/>
        <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType=
                        "textCapSentences|textAutoCorrect"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
                android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>

        <EditText
                android:id="@+id/message4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp" android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="58dp" android:layout_marginTop="79dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11"/>
        <Button
                android:text="@string/button_connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp" android:layout_marginTop="79dp"
                app:layout_constraintTop_toBottomOf="@+id/message4"/>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>