<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_ma_journee"
        tools:context=".MaJourneeActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

    <LinearLayout
            android:id="@+id/linel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">
        <TextView
                android:text="@string/str_moment"
                android:id="@+id/tv_moment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="25dp"/>
        <AutoCompleteTextView
                android:id="@+id/auto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/str_aliments"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        <AutoCompleteTextView
                android:id="@+id/auto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/str_aliments"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        <AutoCompleteTextView
                android:id="@+id/auto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/str_aliments"
                android:imeOptions="actionNext"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:layout_marginTop="0dp">
        <Button
                android:id="@+id/btn_add"
                android:textAllCaps="false"
                android:text="+"
                android:textSize="30dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorButton"
                android:background="@drawable/button_plus_background"
                />
        <Button
                android:id="@+id/btn_del"
                android:textAllCaps="false"
                android:text="-"
                android:textSize="30dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorButton"
                android:background="@drawable/button_plus_background"
        />
        <Button
                android:id="@+id/btn_saisie"
                android:text="@string/str_enr_saisie"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorText"
                android:background="@color/colorButton"/>
    </RelativeLayout>

</RelativeLayout>